GO-1038: swagger support for ssrf
