# cmd/go-swagger/swagger.yml
@@ -1,5 +1,5 @@
 # GENERATED CODE - DO NOT EDIT
-# Generated at 2022-06-06T19:32:24Z. To re-generate, run the following in the repo root:
+# Generated at 2022-06-13T20:39:17Z. To re-generate, run the following in the repo root:
 # go run ./cmd/go-swagger/regen/regen.go
 
 consumes:
@@ -46,13 +46,14 @@ paths:
             type: string
         default:
           description: error occured
-  /cmdInjection/exec.Command/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /cmdInjection/exec.Command/query/{safety}:
     get:
       tags:
         - cmd_injection
       description: demonstrates Command Injection via query, with vulnerable function exec.Command
       operationId: CmdInjectionGetQueryCommand
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -69,13 +70,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /cmdInjection/exec.CommandContext/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /cmdInjection/exec.CommandContext/query/{safety}:
     get:
       tags:
         - cmd_injection
       description: demonstrates Command Injection via query, with vulnerable function exec.CommandContext
       operationId: CmdInjectionGetQueryCommandContext
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -108,13 +110,14 @@ paths:
             type: string
         default:
           description: error occured
-  /pathTraversal/os.ReadFile/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.ReadFile/query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via query, with vulnerable function os.ReadFile
       operationId: PathTraversalGetQueryReadFile
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -131,13 +134,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.ReadFile/buffered-query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.ReadFile/buffered-query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via buffered-query, with vulnerable function os.ReadFile
       operationId: PathTraversalGetBufferedQueryReadFile
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -154,13 +158,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.Open/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.Open/query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via query, with vulnerable function os.Open
       operationId: PathTraversalGetQueryOpen
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -177,13 +182,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.Open/buffered-query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.Open/buffered-query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via buffered-query, with vulnerable function os.Open
       operationId: PathTraversalGetBufferedQueryOpen
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -200,13 +206,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.WriteFile/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.WriteFile/query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via query, with vulnerable function os.WriteFile
       operationId: PathTraversalGetQueryWriteFile
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -223,13 +230,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.WriteFile/buffered-query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.WriteFile/buffered-query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via buffered-query, with vulnerable function os.WriteFile
       operationId: PathTraversalGetBufferedQueryWriteFile
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -246,13 +254,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.Create/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.Create/query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via query, with vulnerable function os.Create
       operationId: PathTraversalGetQueryCreate
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -269,13 +278,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /pathTraversal/os.Create/buffered-query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /pathTraversal/os.Create/buffered-query/{safety}:
     get:
       tags:
         - path_traversal
       description: demonstrates Path Traversal via buffered-query, with vulnerable function os.Create
       operationId: PathTraversalGetBufferedQueryCreate
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -308,13 +318,14 @@ paths:
             type: string
         default:
           description: error occured
-  /xss/Sink/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /xss/Sink/query/{safety}:
     get:
       tags:
         - xss
       description: demonstrates Reflected XSS via query, with vulnerable function _
       operationId: XSSGetQuerySink
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -331,13 +342,14 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /xss/Sink/buffered-query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /xss/Sink/buffered-query/{safety}:
     get:
       tags:
         - xss
       description: demonstrates Reflected XSS via buffered-query, with vulnerable function _
       operationId: XSSGetBufferedQuerySink
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -370,13 +382,14 @@ paths:
             type: string
         default:
           description: error occured
-  /sqlInjection/sqlite3.exec/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /sqlInjection/sqlite3.exec/query/{safety}:
     get:
       tags:
         - sql_injection
       description: demonstrates SQL Injection via query, with vulnerable function sqlite3.exec
       operationId: SQLInjectionGetQueryExec
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -409,13 +422,14 @@ paths:
             type: string
         default:
           description: error occured
-  /ssrf/Sink/query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /ssrf/http/query/{safety}:
     get:
       tags:
         - ssrf
-      description: demonstrates Server Side Request Forgery via query, with vulnerable function _
-      operationId: SsrfGetQuerySink
+      description: demonstrates Server Side Request Forgery via query, with vulnerable function net/http
+      operationId: SsrfGetQueryHTTP
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
@@ -448,13 +462,14 @@ paths:
             type: string
         default:
           description: error occured
-  /unvalidatedRedirect//unvalidatedRedirect/http.Redirect//query/{safety}: #TODO(GO-1388) input should be a swagger parameter
+  /unvalidatedRedirect//unvalidatedRedirect/http.Redirect//query/{safety}:
     get:
       tags:
         - unvalidated_redirect
       description: demonstrates Unvalidated Redirect via query, with vulnerable function http.Redirect
       operationId: UnvalidatedRedirectGetQueryRedirect
       produces:
+        - text/html
         - text/plain
       parameters:
         - $ref: "#/parameters/safetyParam"
